Recuperação de senha e testes de cobertura para a aplicação como um todo, reformulação de existentes e criação de novos.